# cloud-posture-watch

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  SECURITY.md  action.yml  cloud_posture_watch_cli.py  pyproject.toml
analyzers/: aws_exposure_path_analyzer.py  aws_iam_analyzer.py  aws_rds_analyzer.py  aws_s3_secrets_exposure.py  aws_secrets_analyzer.py  azure_ad_analyzer.py  azure_rbac_analyzer.py  azure_sql_analyzer.py  cloudtrail_analyzer.py  drift_analyzer.py  exposure_analyzer.py  flow_logs_analyzer.py  gcp_cloud_sql_analyzer.py  gcp_iam_analyzer.py  iam_comparison_analyzer.py  logging_analyzer.py  network_exposure.py  nsg_exposure.py  public_exposure.py  s3_policy_analyzer.py  storage_public_access.py
cli/: main.py  posture_api.py  posture_report_cmd.py  scan_cmd.py
docs/: cloud-security-model.md  cloud-soar.md  overview.md  posture-methodology.md
providers/: aws_inventory_collector.py  multi_cloud_scanner.py
reports/: posture_report.py  posture_report_html.py  posture_report_json.py  posture_report_sarif.py  posture_report_schema.py  remediation_guidance.py  report_generator.py  sarif_exporter.py  watch_mode.py  webhook_notifications.py
schemas/: posture.py  risk.py
scripts/: __init__.py  github_action_entrypoint.py
soar/: __init__.py  alerting.py  router.py
tests/: test_aws_exposure_path_analyzer.py  test_aws_iam_analyzer.py  test_aws_rds_analyzer.py  test_aws_s3_secrets_exposure.py  test_aws_secrets_analyzer.py  test_azure_ad_analyzer.py  test_azure_nsg_export.py  test_azure_rbac_analyzer.py  test_azure_sql_analyzer.py  test_baseline_schema_validation.py  test_cli_json_stdout.py  test_cli_list_baselines.py  test_cli_no_color.py  test_cli_output_dir_permissions.py  test_cli_version_flag.py  test_cloudtrail_analyzer.py  test_drift_analyzer.py  test_exposure_analyzer.py  test_flow_logs_analyzer.py  test_gcp_cloud_sql_analyzer.py  test_gcp_firewall_export.py  test_gcp_iam_analyzer.py  test_github_action_entrypoint.py  test_iam_comparison_analyzer.py  test_max_findings.py  test_multi_cloud_scanner.py  test_network_exposure.py  (+14 more)
(+23 files in other folders)
